apply overflow hidden to main app Work image has overflow visible, causing the screen width to be larger then the app. This fixes that bug

--- a/components/home/home.styl
+++ b/components/home/home.styl
@@ -2,6 +2,7 @@
   height 100%
   width 100%
   padding-bottom 60px
+  overflow hidden
 
   .logo-container
     height 100%
