--- a/public/css/main.css
+++ b/public/css/main.css
@@ -637,6 +637,7 @@ a:active {
   height: 100%;
   width: 100%;
   padding-bottom: 60px;
+  overflow: hidden;
 }
 .main-app .logo-container {
   height: 100%;
